Add prime tree table

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
+    <!-- <link rel="stylesheet" href="https://unpkg.com/primeicons@6.0.1/primeicons.css"> -->
+    <!-- <link rel="stylesheet" href="http://localhost:3000/public/prime.css">
+    <link rel="stylesheet" href="http://localhost:3000/prime.css"> -->
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
